--- a/2.html
+++ b/2.html
@@ -4,12 +4,21 @@
 <head>
   <title>Queen fanpage</title>
   <meta charset="utf-8">
+  <style>
+    a {
+      color: olive;
+      text-decoration: none;
+    }
+    p {
+      color: purple;
+    }
+  </style>
 </head>
 <body>
   <h1><a href="index.html">QUEEN</a></h1>
   <ol>
     <li><a href="1.html">History</a></li>
-    <li><a href="2.html">Member</a></li>
+    <li><a href="2.html" style="color:red; text-decoration: underline">Member</a></li>
     <li><a href="3.html">Musical style</a></li>
     <li><a href="4.html">Concert</a></li>
   </ol>
