--- a/4.html
+++ b/4.html
@@ -4,6 +4,15 @@
 <head>
   <title>Queen fanpage</title>
   <meta charset="utf-8">
+  <style>
+    a {
+      color: olive;
+      text-decoration: none;
+    }
+    p {
+      color: purple;
+    }
+  </style>
 </head>
 <body>
   <h1><a href="index.html">QUEEN</a></h1>
@@ -11,7 +20,7 @@
     <li><a href="1.html">History</a></li>
     <li><a href="2.html">Member</a></li>
     <li><a href="3.html">Musical style</a></li>
-    <li><a href="4.html">Concert</a></li>
+    <li><a href="4.html" style="color:red; text-decoration: underline">Concert</a></li>
   </ol>
 <h2>Concerts</h2>
 
