css색입히기 + 댓글

--- a/index.html
+++ b/index.html
@@ -4,19 +4,61 @@
 <head>
   <title>Queen fanpage</title>
   <meta charset="utf-8">
+  <style>
+    a {
+      color: olive;
+      text-decoration: none;
+    }
+    p {
+      color: purple;
+    }
+  </style>
 </head>
 <body>
   <h1><a href="index.html">QUEEN</a></h1>
+  <ol>
+    <li><a href="1.html">History</a></li>
+    <li><a href="2.html">Member</a></li>
+    <li><a href="3.html">Musical style</a></li>
+    <li><a href="4.html">Concert</a></li>
+  </ol>
+<!--
+<h1><a href="index.html"><font color="red">QUEEN</font></a></h1>
 <ol>
-  <li><a href="1.html">History</a></li>
-  <li><a href="2.html">Member</a></li>
-  <li><a href="3.html">Musical style</a></li>
-  <li><a href="4.html">Concert</a></li>
+<li><a href="1.html"><font color="red">History</font></a></li>
+<li><a href="2.html"><font color="red">Member</font></a></li>
+<li><a href="3.html"><font color="red">Musical style</font></a></li>
+<li><a href="4.html"><font color="red">Concert</font></a></li>
 </ol>
+-->
+
 <h2>History</h2>
 
 <p>Queen are a British rock band formed in London in 1970.Their classic line-up was Freddie Mercury (lead vocals and piano), Brian May (lead guitar and vocals), Roger Taylor (drums and vocals), and John Deacon (bass guitar).<br><br><br>
 <img src="concert.jpg" width="50%">
+</p>
+<p>
+  <div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://web1-2.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
 </p>
 </body>
 </html>
